--- a/Employees/heather.html
+++ b/Employees/heather.html
@@ -7,11 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Employees</h1>
-    <a href="ben.html">Ben</a>
-    <a href="stephanie.html">Stephanie</a>
-    <a href="michael.html">Michael</a>
-    <a href="heather.html">Heather</a>
-
+    <h1>Heather</h1>
 </body>
 </html>
