Directory Structure Updated

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Employees</h1>
-    <a href="ben.html">Ben</a>
-    <a href="stephanie.html">Stephanie</a>
-    <a href="michael.html">Michael</a>
-    <a href="heather.html">Heather</a>
-
+    <ul>
+        <li><a href="Employees/ben.html">Ben</a></li>
+        <li><a href="Employees/stephanie.html">Stephanie</a></li>
+        <li><a href="Employees/michael.html">Michael</a></li>
+        <li><a href="Employees/heather.html">Heather</a></li>
+    </ul>
 </body>
 </html>
