--- a/Employees/ben.html
+++ b/Employees/ben.html
@@ -7,11 +7,14 @@
 </head>
 
 <body>
+
+		<button class="btn btn-primary"></button>
+
 	<div style="padding:50px;"class="container">
 		<!-- Back to index.html -->
 		<a href="" class="btn btn-info">back</a>
 		<!-- Employee Name -->
-		<h2>Johnny Football</h2>
+		<h2>Ben</h2>
 
 		<div class="media">
 			<div class="media-left">
@@ -28,7 +31,7 @@
 					</p>
 					<h5>Email</h5>
 					<p>
-						jfootball@branstation.io
+						ben@branstation.io
 					</p>
 					<h5>Bio</h5>
 					<p>
