pushing updated index and style files

--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>tha homies</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-    <h1>Employees</h1>
-    <ul>
-        <li><a href="Employees/ben.html">Ben</a></li>
-        <li><a href="Employees/stephanie.html">Stephanie</a></li>
-        <li><a href="Employees/michael.html">Michael</a></li>
-        <li><a href="Employees/heather.html">Heather</a></li>
-    </ul>
+<body class="index-body">
+    <a class="box-1" href="ben.html">
+        <div class="box-1-con">
+            <p class="box-1-text">ben</p>
+        </div>
+    </a>
+    <a class="box-2" href="stephanie.html">
+        <div class="box-2-con">
+            <p class="box-2-text">stephanie</p>
+        </div>
+    </a>
+    <a class="box-3" href="michael.html">
+            <div class="box-3-con">
+                <p class="box-3-text">michael</p>
+            </div>
+    </a>
+    <a class="box-4" href="heather.html">
+        <div class="box-4-con">
+            <p class="box-4-text">heather</p>
+        </div>
+    </a>
+
 </body>
 </html>
