updated file system

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="index-body">
-    <a class="box-1" href="ben.html">
+    <a class="box-1" href="Employees/ben.html">
         <div class="box-1-con">
             <p class="box-1-text">ben</p>
         </div>
     </a>
-    <a class="box-2" href="stephanie.html">
+    <a class="box-2" href="Employees/stephanie.html">
         <div class="box-2-con">
             <p class="box-2-text">stephanie</p>
         </div>
     </a>
-    <a class="box-3" href="michael.html">
+    <a class="box-3" href="Employees/michael.html">
             <div class="box-3-con">
                 <p class="box-3-text">michael</p>
             </div>
     </a>
-    <a class="box-4" href="heather.html">
+    <a class="box-4" href="Employees/heather.html">
         <div class="box-4-con">
             <p class="box-4-text">heather</p>
         </div>
