--- a/Employees/stephanie.html
+++ b/Employees/stephanie.html
@@ -32,7 +32,7 @@
         </head>
         <body>
             <h1>Stephanie: The Most Fun Employee</h1>
-                <img src="IMG_3949.JPG">
+                <img src="../IMG_3949.JPG">
             
                 <p> Stephanie is the most fun employee at Fun Employees.
                     She is extremely hardworking and really really good at her job.
