finished Employee Page

--- a/Employees/michael.html
+++ b/Employees/michael.html
@@ -1,13 +1,14 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
 	<!-- Load Bootstrap -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 
 <body>
-	<div style="padding:50px;"class="container">
+	<div style="padding:50px;" class="container">
 		<!-- Back to index.html -->
 		<a href="" class="btn btn-info">back</a>
 		<!-- Employee Name -->
@@ -15,7 +16,8 @@
 
 		<div class="media">
 			<div class="media-left">
-				<img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"/>
+				<img class="img-circle" style="border:2px solid #DDD;width:100px;display:inline;" src="https://randomuser.me/api/portraits/lego/1.jpg"
+				/>
 			</div>
 			<div class="media-body">
 				<!-- Employee Position -->
@@ -24,19 +26,22 @@
 					<!-- Employee Bio -->
 					<h5>Age</h5>
 					<p>
-						32
+						29
 					</p>
 					<h5>Email</h5>
 					<p>
-						michael@branstation.io
+						mnorberg88@gmail.com
 					</p>
 					<h5>Bio</h5>
 					<p>
-						Storyfinder, Accountant, Truck Driver, Han Solo's College Roommate. I yell at inanimate objects.
+						Horribly mangled in a freak gasoline fight accident he had is body reconstructed to be more handsome.
 					</p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/m0HwxH02yWM" frameborder="0" allow="autoplay; encrypted-media"
+					    allowfullscreen></iframe>
 				</div>
 			</div>
-	    </div>
+		</div>
 	</div>
 </body>
+
 </html>
